# wayfind

./: .asm-lsp.toml  .editorconfig  .envrc  .gitignore  ARCHITECTURE.md  BENCHMARKING.md  CHANGELOG.md  Cargo.toml  README.md  Routers.md  Routing.md  TODO.md  clippy.toml  committed.toml  deny.toml  flake.nix  release-plz.toml  results.txt  rust-toolchain.toml  rustfmt.toml  tombi.toml  typos.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: CODEOWNERS  renovate.json
.github/actions/setup/: action.yml
.github/workflows/: benchmarks.yml  ci.yml  codspeed.yml  coverage.yml  docs.yml  msrv.yml  no-std.yml  oci.yml  release.yml  renovate.yml  wasm.yml
.zed/: settings.json
benches/: Cargo.toml  gitlab.rs  gitlab_criterion.rs  gitlab_divan.rs  gitlab_routes.rs  matchit.rs  matchit_criterion.rs  matchit_divan.rs  matchit_gungraun.rs  matchit_routes.rs  misses.rs  path_tree.rs  path_tree_criterion.rs  path_tree_divan.rs  path_tree_gungraun.rs  path_tree_routes.rs  stress.rs
benches/benches/: matchit_routes.rs  path_tree_routes.rs
benches/fixtures/: gitlab_routes.rs  matchit_routes.rs  path_tree_routes.rs
benchmarks/: Cargo.toml
crates/authority/: Cargo.toml
crates/authority/src/: constraints.rs  display.rs  errors.rs  id.rs  lib.rs  node.rs  optimize.rs  parser.rs  search.rs  vec.rs
crates/authority/src/errors/: constraint.rs  delete.rs  encoding.rs  insert.rs  template.rs
crates/method/: Cargo.toml
crates/method/src/: display.rs  errors.rs  id.rs  lib.rs
crates/method/src/errors/: delete.rs  insert.rs  search.rs
crates/path/: Cargo.toml
crates/path/src/: constraints.rs  delete.rs  errors.rs  find.rs  id.rs  insert.rs  lib.rs  optimize.rs  parser.rs  search.rs  state.rs
crates/path/src/errors/: constraint.rs  delete.rs  encoding.rs  insert.rs  search.rs  template.rs
crates/percent/: Cargo.toml
crates/percent/src/: errors.rs  lib.rs
crates/punycode/: Cargo.toml
crates/punycode/src/: errors.rs  lib.rs
crates/rails/: Cargo.toml  README.md
crates/rails-macro/: Cargo.toml
crates/rails-macro/src/: lib.rs
crates/rails/input/: routes.txt
crates/rails/output/: routes.json
crates/rails/src/: main.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/tree/: Cargo.toml
crates/tree/src/: delete.rs  display.rs  find.rs  insert.rs  lib.rs  node.rs  optimize.rs  parser.rs  search.rs  state.rs
docs/: Authority.md  Method.md  Path.md
examples/: search.rs  search.s
examples/axum/: Cargo.toml
examples/axum-fork/: Cargo.toml
examples/axum-fork/benches/: benches.rs
examples/axum-fork/src/: boxed.rs  extension.rs  form.rs  json.rs  serve.rs
examples/axum-fork/src/extract/: connect_info.rs  host.rs  matched_path.rs  multipart.rs  nested_path.rs  query.rs  raw_form.rs  raw_query.rs  request_parts.rs  state.rs  ws.rs
examples/axum/src/: main.rs
examples/hyper/: Cargo.toml
examples/hyper/src/: main.rs
examples/oci/: Cargo.toml  README.md
examples/oci/src/: extract.rs  handler.rs  lib.rs  main.rs  response.rs  router.rs  routes.rs  state.rs
examples/oci/src/constraints/: name.rs
examples/oci/src/extract/: body.rs  headers.rs  method.rs  path.rs  query.rs  route.rs  template.rs
examples/oci/src/routes/: blob.rs  manifest.rs  root.rs  tags.rs
examples/oci/src/types/: digest.rs
examples/rails/: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/dict/: wayfind.dict
fuzz/fuzz_targets/: e2e.rs  gitlab.rs  insert.rs
nix/: vm.nix
nix/modules/: benchmarks.nix  dev.nix  vm.nix
nix/pkgs/cargo-codspeed/: default.nix
nix/pkgs/cargo-insta/: default.nix
nix/pkgs/cargo-llvm-cov/: default.nix
nix/pkgs/oci-conformance/: default.nix
nix/pkgs/oci-distribution-spec-conformance/: default.nix
nix/shells/: benchmarks.nix  ci.nix  coverage.nix  default.nix  docs.nix  fuzz.nix  msrv.nix  oci.nix
scripts/: bench-build.sh  bench-run.sh  bench.sh  checks.sh  compatibility.sh  coverage.sh  docs.sh  fuzz.sh  msrv.sh  release-pr.sh  release.sh
src/: bounds.rs  builder.rs  chain.rs  compiler.rs  constraint.rs  constraints.rs  decode.rs  delete.rs  display.rs  errors.rs  expander.rs  find.rs  flags.rs  id.rs  insert.rs  lib.rs  main.rs  map.rs  matches.rs  needle.rs  node.rs  nodes.rs  nue_parser.rs  optimize.rs  parser.rs  parts.rs  path.rs  priority.rs  reachable.rs  request.rs  routable.rs  route.rs  router.rs  routers.rs  search.rs  segment.rs  sorted.rs  specificity.rs  state.rs  storage.rs  (+3 more)
src/constraints/: numeric.rs  parameter.rs  request.rs
src/decode/: percent.rs  punycode.rs
src/errors/: constraint.rs  decode.rs  delete.rs  encoding.rs  insert.rs  parts.rs  path.rs  request.rs  routable.rs  route.rs  search.rs  template.rs
src/errors/encoding/: percent.rs  punycode.rs
src/node/: bounds.rs  conflict.rs  delete.rs  display.rs  find.rs  flags.rs  insert.rs  matches.rs  optimize.rs  reachable.rs  search.rs  suffixes.rs  tails.rs
src/router/: authority.rs  method.rs  path.rs
src/router/authority/: delete.rs  display.rs  errors.rs  find.rs  id.rs  insert.rs  parser.rs  search.rs
src/router/method/: display.rs  id.rs
src/router/path/: delete.rs  display.rs  errors.rs  find.rs  insert.rs  node.rs  parser.rs  search.rs  state.rs
src/routers/: authority.rs  method.rs  path.rs
src/routers/authority/: id.rs
src/routers/method/: display.rs  errors.rs  id.rs
src/routers/path/: constraints.rs  delete.rs  display.rs  errors.rs  find.rs  id.rs  insert.rs  node.rs  optimize.rs  parser.rs  search.rs
tests/: authority.rs  common.rs  constraint.rs  constraint_function.rs  constraint_regex.rs  constraints.rs  delete.rs  display.rs  dynamic.rs  edge_cases.rs  encoding.rs  errors.rs  escape.rs  example.rs  get.rs  gitlab.rs  insert.rs  matchit.rs  matchit_delete.rs  matchit_matches.rs  method.rs  optimize.rs  optional.rs  optionals.rs  parameter_constraint_function.rs  parameter_constraint_regex.rs  parameter_constraints.rs  path_tree.rs  poem.rs  readme.rs  regex.rs  request_constraint_function.rs  static.rs  trailing_slash.rs  uncommon.rs  utils.rs  wildcard.rs  wildcards.rs
(+51 files in other folders)
