# https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace]
resolver = "3"
members = [".", "fuzz"]

[workspace.package]
version = "0.8.1"
authors = ["Cathal Mullan <contact@cathal.dev>"]
edition = "2024"
rust-version = "1.87"
repository = "https://github.com/DuskSystems/wayfind"
license = "MIT OR Apache-2.0"
keywords = ["router"]
categories = ["network-programming", "web-programming"]

# https://doc.rust-lang.org/rustc/lints/groups.html
[workspace.lints.rust]
unsafe_code = "forbid"

unused = { level = "deny", priority = -2 }
future-incompatible = { level = "deny", priority = -1 }
keyword-idents = { level = "deny", priority = -1 }
let-underscore = { level = "deny", priority = -1 }
nonstandard-style = { level = "deny", priority = -1 }
refining-impl-trait = { level = "deny", priority = -1 }
rust-2018-compatibility = { level = "deny", priority = -1 }
rust-2018-idioms = { level = "deny", priority = -1 }
rust-2021-compatibility = { level = "deny", priority = -1 }
rust-2024-compatibility = { level = "deny", priority = -1 }

# https://rust-lang.github.io/rust-clippy/master/index.html
[workspace.lints.clippy]
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Personal Preferences
clone_on_ref_ptr = "deny"
cognitive_complexity = "allow"
module_name_repetitions = "allow"
str_to_string = "deny"
too_many_lines = "allow"

# Our templates look similar to formatted strings.
literal_string_with_formatting_args = "allow"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1

# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "wayfind"
description = "A speedy, flexible router."
include = [
  "/benches",
  "/fuzz",
  "/src",
  "/tests",
  "/BENCHMARKING.md",
  "/CHANGELOG.md",
  "/LICENSE-APACHE",
  "/LICENSE-MIT",
  "/README.md",
]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
# Data Structures
smallvec = { version = "1.15", features = ["const_generics", "union"] }

[dev-dependencies]
# Testing
# NOTE: Keep in sync with `cargo-insta` Nix package: `cargo insta --version`
insta = "=1.43.1"
similar-asserts = "1.7"

# Benchmarking
divan = "0.1"

# Routers
actix-router = "=0.5.3"
matchit = "=0.8.6"
ntex-router = "=0.5.3"
path-tree = "=0.8.3"
route-recognizer = "=0.3.1"
xitca-router = "=0.3.0"

[[bench]]
name = "matchit"
harness = false

[[bench]]
name = "path_tree"
harness = false
