# https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace]
resolver = "3"
members = [".", "fuzz"]

[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/DuskSystems/wayfind"
license = "MIT OR Apache-2.0"
keywords = ["router", "path"]
categories = ["network-programming", "web-programming"]

# https://doc.rust-lang.org/rustc/lints/groups.html
[workspace.lints.rust]
unsafe_code = "deny"

unused = { level = "deny", priority = -2 }
future-incompatible = { level = "deny", priority = -1 }
keyword-idents = { level = "deny", priority = -1 }
let-underscore = { level = "deny", priority = -1 }
nonstandard-style = { level = "deny", priority = -1 }
refining-impl-trait = { level = "deny", priority = -1 }
rust-2018-compatibility = { level = "deny", priority = -1 }
rust-2018-idioms = { level = "deny", priority = -1 }
rust-2021-compatibility = { level = "deny", priority = -1 }
rust-2024-compatibility = { level = "deny", priority = -1 }

# https://rust-lang.github.io/rust-clippy/master/index.html
[workspace.lints.clippy]
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

[workspace.dependencies]
wayfind = { path = "." }

# SIMD
memchr = { version = "2.7", default-features = false, features = ["alloc"] }

# Collections
slab = { version = "0.4", default-features = false }
smallvec = { version = "1.15", default-features = false, features = ["const_new", "union"] }

# Testing
insta = { version = "1.46", default-features = false }
similar-asserts = { version = "1.7", default-features = false }

# Fuzzing
libfuzzer-sys = { version = "0.4", default-features = false, features = ["link_libfuzzer"] }

# Benchmarking
divan = { package = "codspeed-divan-compat", version = "4.3", default-features = false }

# Routers
actix-router = { version = "=0.5.3", default-features = false }
matchit = { version = "=0.9.1", default-features = false }
ntex-router = { version = "=1.0.0", default-features = false }
path-tree = { version = "=0.8.3", default-features = false }
route-recognizer = { version = "=0.3.1", default-features = false }
xitca-router = { version = "=0.4.0", default-features = false }

# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "wayfind"
description = "A speedy, flexible router."
include = [
  "/src",
  "/tests",
  "/CHANGELOG.md",
  "/LICENSE-APACHE",
  "/LICENSE-MIT",
  "/README.md",
]

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
# SIMD
memchr.workspace = true

# Collections
slab.workspace = true
smallvec.workspace = true

[dev-dependencies]
# Testing
insta.workspace = true
similar-asserts.workspace = true

# Benchmarking
divan.workspace = true

# Routers
actix-router.workspace = true
matchit.workspace = true
ntex-router.workspace = true
path-tree.workspace = true
route-recognizer.workspace = true
xitca-router.workspace = true

[[bench]]
name = "stress"
harness = false

[[bench]]
name = "matchit"
harness = false

[[bench]]
name = "path_tree"
harness = false
