[package]
name = "wayfind-fuzz"
description = "Fuzzing for `wayfind`."
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
wayfind = { path = ".." }
libfuzzer-sys = "0.4"

[[bin]]
name = "e2e"
path = "fuzz_targets/e2e.rs"
test = false
doc = false
bench = false
