[package]
name = "wayfind-fuzz"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata]
cargo-fuzz = true

[lints]
workspace = true

[dependencies]
wayfind = { path = ".." }

# Fuzzing
libfuzzer-sys = { workspace = true, features = ["link_libfuzzer"] }

[[bin]]
name = "e2e"
path = "fuzz_targets/e2e.rs"
test = false
doc = false
bench = false
