[package]
name = "wayfind-fuzz"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata]
cargo-fuzz = true

[lints]
workspace = true

[dependencies]
wayfind.workspace = true

# Fuzzing
libfuzzer-sys.workspace = true

[[bin]]
name = "e2e"
path = "fuzz_targets/e2e.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gitlab"
path = "fuzz_targets/gitlab.rs"
test = false
doc = false
bench = false
