# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "wayfind-path"
description = "Path router for `wayfind`."
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
smallvec = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
similar-asserts = { workspace = true }
