# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "wayfind-rails-macro"
description = "Macros for `wayfind` with Rails routes."
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
wayfind = { path = "../.." }

# Macro
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

# Serde
serde_json = "1.0"
