# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "wayfind-rails"
description = "Rails route parser for `wayfind`."
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
wayfind = { path = "../.." }

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex
fancy-regex = "0.14"

[dev-dependencies]
# Testing
# NOTE: Keep in sync with `cargo-insta` Nix package.
insta = { version = "=1.41.1", features = ["json"] }
