# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "wayfind-storage"
description = "Storage for `wayfind`."
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
smallvec = { workspace = true }
