# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "wayfind-axum-example"
description = "Example of using `wayfind` with `axum`."
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
wayfind-axum = { path = "../axum-fork" }

tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
