# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "wayfind-axum-example"
description = "Example of using `wayfind` with `axum`."
edition = "2021"
publish = false

[dependencies]
wayfind-axum = { path = "../axum-fork" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
