# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "wayfind-hyper-example"
description = "Example of using `wayfind` with `hyper`."
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
wayfind = { path = "../.." }

tokio = { version = "1", features = ["full"] }
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.1"
http-body-util = "0.1"
bytes = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
