# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "wayfind-oci-example"
description = "Example of using `wayfind` as an OCI registry."
rust-version = "1.83"
publish = false

version = "0.8.1"
authors = ["Cathal Mullan <contact@cathal.dev>"]
edition = "2021"
repository = "https://github.com/DuskSystems/wayfind"
license = "MIT OR Apache-2.0"
keywords = ["router"]
categories = ["network-programming", "web-programming"]

# https://doc.rust-lang.org/rustc/lints/groups.html
[lints.rust]
unsafe_code = "forbid"

unused = { level = "deny", priority = -2 }
future-incompatible = { level = "deny", priority = -1 }
keyword-idents = { level = "deny", priority = -1 }
let-underscore = { level = "deny", priority = -1 }
nonstandard-style = { level = "deny", priority = -1 }
refining-impl-trait = { level = "deny", priority = -1 }
rust-2018-compatibility = { level = "deny", priority = -1 }
rust-2018-idioms = { level = "deny", priority = -1 }
rust-2021-compatibility = { level = "deny", priority = -1 }

# https://rust-lang.github.io/rust-clippy/master/index.html
[lints.clippy]
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Personal Preferences
clone_on_ref_ptr = "deny"
cognitive_complexity = "allow"
module_name_repetitions = "allow"
new_without_default = "allow"
str_to_string = "deny"
too_many_lines = "allow"

[dependencies]
wayfind = { path = "../.." }

# Web
bytes = "1.10"
http = "1.3"
http-body-util = "0.1"
hyper = "1.6"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Serde
serde_json = "1.0"

# Errors
anyhow = "1.0"
thiserror = "2.0"

# UUID
uuid = { version = "1.16", features = ["v4"] }

# Hash
sha2 = "0.10"

# Encoding
percent-encoding = "2.3"

# Regex
regex = "1.11"

# Data Structures
dashmap = "6.1"
